# rust-wasm-prost

./: .gitattributes  Cargo.toml  README.md  build.rs
proto/: complex.proto  simple.proto
src/: example_byte_stream.rs  example_json.rs  lib.rs  util.rs
www/: bootstrap.ts  example_byte_stream.ts  example_json.ts  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/proto/: complex_pb.d.ts  complex_pb.js  simple_pb.d.ts  simple_pb.js
