[package]
name = "rust-wasm-prost"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = { version = "1.0" }
prost = "0.10.0"
prost-types = "0.10.0"

[dependencies.web-sys]
version = "0.3.56"
features = ["console"]

[build-dependencies]
prost-build = { version = "0.9" }
